# ble_gateway_dm_firmware

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.yml  ble_gateway_dm_firmware.code-workspace  prj.conf  testcase.yaml  version_history.md
app/attributes/: app_params.yml
boards/: bl5340_dvk_cpuapp.conf  bl5340_dvk_cpuapp.overlay  mg100.conf  mg100.overlay  nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay  pinnacle_100_dvk.conf  pinnacle_100_dvk.overlay
components/attributes/bl5340_lwm2m/attributes/: api.json  api.yml  defaults.txt  max.txt  writable.txt
components/attributes/bl5340_lwm2m/include/: attr_table.h  attr_util.h
components/attributes/bl5340_lwm2m/src/: attr_table.c
components/attributes/bl5340_mqtt/attributes/: api.json  api.yml  defaults.txt  max.txt  writable.txt
components/attributes/bl5340_mqtt/include/: attr_table.h  attr_util.h
components/attributes/bl5340_mqtt/src/: attr_table.c
components/attributes/bl5340_none/attributes/: api.json  api.yml  defaults.txt  max.txt  writable.txt
components/attributes/bl5340_none/include/: attr_table.h  attr_util.h
components/attributes/bl5340_none/src/: attr_table.c
components/attributes/mg100_lwm2m/attributes/: api.json  max.txt
components/attributes/mg100_lwm2m/include/: attr_table.h
components/attributes/mg100_mqtt/attributes/: api.json  api.yml  defaults.txt  writable.txt
components/attributes/mg100_mqtt/include/: attr_table.h
components/attributes/mg100_mqtt/src/: attr_table.c
components/attributes/mg100_none/attributes/: api.json  api.yml  defaults.txt  writable.txt
components/attributes/mg100_none/include/: attr_table.h
components/attributes/p100_lwm2m/attributes/: api.yml  defaults.txt  writable.txt
components/attributes/p100_lwm2m/include/: attr_util.h
components/attributes/p100_lwm2m/src/: attr_table.c
components/attributes/p100_mqtt/attributes/: api.json  api.yml  defaults.txt  max.txt
components/attributes/p100_mqtt/include/: attr_util.h
components/attributes/p100_mqtt/src/: attr_table.c
components/attributes/p100_none/attributes/: max.txt
components/attributes/p100_none/include/: attr_util.h
components/attributes/p100_none/src/: attr_table.c
config/: b0.bl5340_dvk_cpuapp.conf  b0.mg100.conf  ble.conf  ble_sensors.conf  device_management.conf  filesystem.conf  firmware_update.conf  hardware_key.conf  hci_rpmsg.bl5340_dvk_cpunet.conf  lwm2m_telemetry.conf  mbedtls.conf  mcuboot.bl5340_dvk_cpuapp.conf  mcuboot.nrf7002dk_nrf5340_cpuapp.conf  mcuboot.pinnacle_100_dvk.conf  memfault.conf  mqtt_telemetry.conf  networking.conf  wifi.conf
config/include/: nrf-config-user.h
config/keys/: debug_priv_a.pem  debug_priv_b.pem  debug_priv_c.pem  debug_pub_a.pem  debug_pub_b.pem  debug_pub_c.pem
memfault/bl5340/: memfault_metrics_heartbeat_config.def
memfault/mg100/: memfault_metrics_heartbeat_config.def
scripts/: factory_init.prod.bl5340.sh  factory_init.prod.mg100.sh  factory_init.qa.bl5340.sh  factory_init.qa.mg100.sh  factory_init.qa.p100.sh  script_cert_cmds.txt  script_factory_load.txt
src/: main.c
src/framework_config/: fwk_ids.h  fwk_msg_codes.h
src/version/: app_version.h.in  mcuboot_image_version.conf.in  memfault_info.conf.in
